tooling/nargo_cli/tests/snapshots/compile_failure/cannot_deduce_numeric_generic/execute__tests__cannot_deduce_numeric_generic_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Could not determine array length `_`, encountered error: `Expected a constant, but found `_``
  ┌─ src/main.nr:2:5
  │
2 │     N
  │     -
  │

Aborting due to 1 previous error
