tooling/nargo_cli/tests/snapshots/compile_failure/cannot_deduce_numeric_generic/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Could not determine array length `_`, encountered error: `Expected a constant, but found `_``
  ┌─ src/main.nr:2:5
  │
2 │     N
  │     -
  │

Aborting due to 1 previous error
